--- a/dbz2.html
+++ b/dbz2.html
@@ -173,7 +173,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1Y4KFG5dKbXT_oCUPicT1z59L_W14q_l5/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball Z TV Special #1: Bardock - The Father of Goku</h4>
 		  <p></p>
 		</div>
@@ -213,7 +213,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1etHoRjO_4XZZLz7OEnJPf-JEvc1_D69E/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball Z Movie 4: Lord Slug</h4>
 		  <p></p>
 		</div>
