--- a/dbz4.html
+++ b/dbz4.html
@@ -133,7 +133,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1CuJ3A8uj-KI-Sff3fYYrza5g397mD5h_/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball Z Movie 5: Cooler's Revenge</h4>
 		  <p></p>
 		</div>
@@ -198,7 +198,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1cq4l1xYIeToGarisoxPUYOHk7aPb11FZ/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball Z TV Special #2: The History of Trunks</h4>
 		  <p></p>
 		</div>
