--- a/dbz6.html
+++ b/dbz6.html
@@ -93,17 +93,17 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1JmiW8O4sOOvkwpITWbu_5HTL33o2DbRZ/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball Z Movie 6: Return of Cooler</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1gUL2Y5PADyuXx0XJSuZwQ2cJvtGw01SU/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball Z Movie 7: Super Android 13!</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1eaCsua8AGkbrlfB8_NiLaXOWxkSwE1-P/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball Z Movie 8: Broly - The Legendary Super Saiyan</h4>
 		  <p></p>
 		</div>
@@ -208,7 +208,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/12s9biykIBJMEhsHrqtQIGdtoEsoRPAGv/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball Z Movie 9: Bojack Unbound</h4>
 		  <p></p>
 		</div>
