--- a/dbz9.html
+++ b/dbz9.html
@@ -103,7 +103,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1dkjBz4_p0eJoSDVS99-9LhvGNutq46OE/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball Z Movie 12: Fusion Reborn</h4>
 		  <p></p>
 		</div>
@@ -228,7 +228,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1vc_A6Ox2IIYKFR3jPVWzJ8gzMoS8_hKW/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball Z Movie 13: Wrath of the Dragon</h4>
 		  <p></p>
 		</div>
@@ -248,12 +248,12 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1Pcb1gla0yk7G_11C8oziM1dWxQ-GeowV/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball Z Movie 14: Battle of Gods</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1sogxbK1A2ajPbktWJ8NZXOYGiq4NpiI7/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball Z Movie 15: Ressurection 'F'</h4>
 		  <p></p>
 		</div>
