--- a/dbz7.html
+++ b/dbz7.html
@@ -113,7 +113,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1JIBbE-2z6gDmUjGe70H9i9YnkUIcd9UM/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball Z Movie 10: Broly - Second Coming</h4>
 		  <p></p>
 		</div>
@@ -163,7 +163,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1BKGdyTEoWEaJDSIYsJrXJmxtwmS803IH/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball Z Movie 11: Bio Broly</h4>
 		  <p></p>
 		</div>
