--- a/dbgt.html
+++ b/dbgt.html
@@ -43,7 +43,7 @@
 	<section>
 	  <h2 >Season 1</h2>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1MQkNWEbtQGmwLLS8Graih98Txnk7G5dk/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Dragon Ball - Path to Power</h4>
 		  <p></p>
 		</div>
