--- a/dbgt2.html
+++ b/dbgt2.html
@@ -88,12 +88,12 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="https://drive.google.com/file/d/1TbE7ct9iIjqjfuaWsNSqd3OCw_ug-0V6/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 10</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="https://drive.google.com/file/d/11AENPQpw5PG15jjXyj4C0_pN3vt4ag2d/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 11</h4>
 		  <p></p>
 		</div>
