--- a/dbz7.html
+++ b/dbz7.html
@@ -5,9 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Dragon Ball Preservation Project</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="images/favicon.ico">
-<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-<link rel="icon" sizes="192x192" href="images/android.png">
+<link rel="shortcut icon" href="images/Z/favicon.ico">
+<link rel="apple-touch-icon" href="images/Z/apple-touch-icon.png">
+<link rel="icon" sizes="192x192" href="images/Z/android.png">
 </head>
 <body>
 <!-- Main Container -->
