--- a/dbz8.html
+++ b/dbz8.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Dragon Ball Preservation Project</title>
+<title>Dragon Ball Z</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="images/Z/favicon.ico">
 <link rel="apple-touch-icon" href="images/Z/apple-touch-icon.png">
