--- a/dbz7.html
+++ b/dbz7.html
@@ -13,7 +13,7 @@
 <!-- Main Container -->
 <div class="container">
   <span class="logo" width="auto" height="auto">
-	<a><img src="images/Dragon_Ball_Z_Logo.png" alt="Dragon Ball" width="auto" height="50%"></a>
+	<a><img src="images/Dragon_Ball_Z_Logo.png" alt="Dragon Ball" width="20%" height="auto"></a>
   </span>
   <!-- Navigation -->
   <header>
