--- a/dbz7.html
+++ b/dbz7.html
@@ -63,7 +63,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1v48H7c96iwF0g4ENKcc2ynYXlqkrQW8S/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 4</h4>
 		  <p></p>
 		</div>
@@ -108,7 +108,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1GahsQc9mm90I9J8SHqSRkfFVJY2Fzblq/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 13</h4>
 		  <p></p>
 		</div>
@@ -153,7 +153,7 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/139s1VFjEcaOAWOc-l0efKo5nRBZMyce7/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 21</h4>
 		  <p></p>
 		</div>
